fix(Datasets): Fix race condition with embargoed dataset

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@nuxtjs/robots": "^2.4.2",
     "amplify": "^0.0.11",
     "aws-amplify": "^3.3.26",
+    "cookie-universal-nuxt": "^2.1.4",
     "element-ui": "^2.4.11",
     "flexboxgrid": "^6.3.1",
     "generate-changelog": "^1.8.0",
-    "js-cookie": "^2.2.1",
     "marked": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
