--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.13.1",
     "nuxt": "^2.12.0",
     "ramda": "^0.27.0",
+    "long": "^4.0.0",
     "sass-loader": "^8.0.2",
     "striptags": "^3.1.1",
     "v-tooltip": "^2.0.3",
