--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "@nuxtjs/robots": "^2.4.2",
     "amplify": "^0.0.11",
     "aws-amplify": "^3.3.26",
+    "bytebuffer": "^5.0.1",
     "cookie-universal-nuxt": "^2.1.4",
     "element-ui": "^2.4.11",
     "flexboxgrid": "^6.3.1",
     "generate-changelog": "^1.8.0",
+    "long": "^4.0.0",
     "marked": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.12.0",
+    "protobufjs": "^6.11.2",
     "ramda": "^0.27.0",
-    "long": "^4.0.0",
     "sass-loader": "^8.0.2",
     "striptags": "^3.1.1",
     "v-tooltip": "^2.0.3",
