--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/gtm": "^2.2.3",
+    "@nuxtjs/recaptcha": "^1.1.2",
     "@nuxtjs/robots": "^2.4.2",
     "amplify": "^0.0.11",
     "aws-amplify": "^3.3.26",
